# helper

./: CMakeLists.txt  README.md  helper.h  qhelper.h
tests/: CMakeLists.txt
tests/helper/: CMakeLists.txt  main.cpp
tests/qhelper/: CMakeLists.txt  main.cpp
